# lwqt-pcmanfm

./: CMakeLists.txt  pcmanfm-qt.1.in
autostart/: CMakeLists.txt  lxqt-desktop.desktop.in
config/: CMakeLists.txt
pcmanfm/: CMakeLists.txt  desktopentrydialog.cpp  desktopwindow.cpp  desktopwindow.h  launcher.cpp  pcmanfm-qt-desktop-pref.desktop.in  pcmanfm-qt.desktop.in  settings.cpp  settings.h  tabpage.cpp
pcmanfm/translations/: pcmanfm-qt.desktop.yaml  pcmanfm-qt_ar.desktop.yaml  pcmanfm-qt_bg.desktop.yaml  pcmanfm-qt_ca.desktop.yaml  pcmanfm-qt_cs.desktop.yaml  pcmanfm-qt_da.desktop.yaml  pcmanfm-qt_de.desktop.yaml  pcmanfm-qt_el.desktop.yaml  pcmanfm-qt_es.desktop.yaml  pcmanfm-qt_et.desktop.yaml  pcmanfm-qt_fr.desktop.yaml  pcmanfm-qt_gl.desktop.yaml  pcmanfm-qt_he.desktop.yaml  pcmanfm-qt_hr.desktop.yaml  pcmanfm-qt_hu.desktop.yaml  pcmanfm-qt_it.desktop.yaml  pcmanfm-qt_ja.desktop.yaml  pcmanfm-qt_ko.desktop.yaml  pcmanfm-qt_lt.desktop.yaml  pcmanfm-qt_lv.desktop.yaml  pcmanfm-qt_nb_NO.desktop.yaml  pcmanfm-qt_nl.desktop.yaml  pcmanfm-qt_pl.desktop.yaml  pcmanfm-qt_pt.desktop.yaml  pcmanfm-qt_pt_BR.desktop.yaml  pcmanfm-qt_ru.desktop.yaml  pcmanfm-qt_sl.desktop.yaml  pcmanfm-qt_tr.desktop.yaml  pcmanfm-qt_uk.desktop.yaml  pcmanfm-qt_zh_CN.desktop.yaml
